WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35186
AX: AXFocused is not writable like it should be on nodes
https://bugs.webkit.org/show_bug.cgi?id=35186
Summary
AX: AXFocused is not writable like it should be on nodes
chris fleizach
Reported
2010-02-19 16:28:46 PST
when a node is made focusable through tabindex=0, AXFocused needs to be writable
Attachments
Patch
(4.42 KB, patch)
2010-02-19 16:31 PST
,
chris fleizach
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2010-02-19 16:31:30 PST
Created
attachment 49111
[details]
Patch
chris fleizach
Comment 2
2010-02-22 11:29:44 PST
http://trac.webkit.org/changeset/55095
Eric Seidel (no email)
Comment 3
2010-02-22 12:38:54 PST
This broke Leopard:
http://build.webkit.org/results/Leopard%20Intel%20Release%20(Tests)/r55095%20(10907)/platform/mac/accessibility/element-focus-pretty-diff.html
chris fleizach
Comment 4
2010-02-22 12:41:12 PST
will work on a fix
Eric Seidel (no email)
Comment 5
2010-02-22 12:43:25 PST
Looks like it also broke the same test on Tiger:
http://build.webkit.org/results/Tiger%20Intel%20Release/r55095%20(9002)/platform/mac/accessibility/element-focus-pretty-diff.html
chris fleizach
Comment 6
2010-02-22 13:10:55 PST
hopefully this will fix it
http://trac.webkit.org/changeset/55102
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug