AX: AXFocused is not writable like it should be on nodes https://bugs.webkit.org/show_bug.cgi?id=35186

Reviewed by Beth Dakin.

WebCore:

Test: platform/mac/accessibility/element-focus.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::canSetFocusAttribute):

LayoutTests:

* platform/mac/accessibility/element-focus-expected.txt: Added.
* platform/mac/accessibility/element-focus.html: Added.



Canonical link: https://commits.webkit.org/46398@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55095 268f45cc-cd09-0410-ab3c-d52691b4dbfc